@@ -10,6 +10,7 @@
 #include "dds/DCPS/RTPS/ParameterListConverter.h"
 #include "../common/TestSupport.h"
 #include "dds/DCPS/Definitions.h"
+#include "dds/DCPS/GuidBuilder.h"
 #include "dds/DCPS/Service_Participant.h"
 #include "dds/DdsDcpsInfoUtilsC.h"
 #include "dds/DCPS/RTPS/RtpsMessageTypesC.h"
@@ -2662,6 +2663,52 @@ ACE_TMAIN(int, ACE_TCHAR*[])
                 reader_data_out.contentFilterProperty.expressionParameters[0]));
     TEST_ASSERT(!strcmp("32",
                 reader_data_out.contentFilterProperty.expressionParameters[1]));
+  }
+  { // Should encode/decode reader assoicated guid list properly
+    DiscoveredReaderData reader_data = Factory::reader_data(
+        NULL, NULL, VOLATILE_DURABILITY_QOS, 0, 0, 0, 0,
+        AUTOMATIC_LIVELINESS_QOS, 0, 0,
+        BEST_EFFORT_RELIABILITY_QOS, 0, 0, NULL, 0,
+        SHARED_OWNERSHIP_QOS,
+        BY_SOURCE_TIMESTAMP_DESTINATIONORDER_QOS,
+        INSTANCE_PRESENTATION_QOS, false, false, NULL, NULL, 0, NULL, 0,
+        NULL, 0, NULL, 0);
+    OpenDDS::DCPS::GUID_t writer0, writer1;
+    OpenDDS::DCPS::GuidBuilder gb0(writer0);
+    OpenDDS::DCPS::GuidBuilder gb1(writer1);
+    gb0.guidPrefix0(17);
+    gb0.guidPrefix1(0);
+    gb0.guidPrefix2(167);
+    gb1.guidPrefix0(17);
+    gb1.guidPrefix1(1);
+    gb1.guidPrefix2(167);
+    
+    reader_data.readerProxy.associatedWriters.length(2);
+    reader_data.readerProxy.associatedWriters[0] = writer0;
+    reader_data.readerProxy.associatedWriters[1] = writer1;
+
+    ParameterList param_list;
+    TEST_ASSERT(!to_param_list(reader_data, param_list));
+    Parameter guid0 = get(param_list, PID_OPENDDS_ASSOCIATED_WRITER, 0);
+    Parameter guid1 = get(param_list, PID_OPENDDS_ASSOCIATED_WRITER, 1);
+    TEST_ASSERT(!memcmp(guid0.guid().guidPrefix, 
+                        writer0.guidPrefix, 
+                        sizeof(OpenDDS::DCPS::GuidPrefix_t)));
+    TEST_ASSERT(!memcmp(guid1.guid().guidPrefix, 
+                        writer1.guidPrefix, 
+                        sizeof(OpenDDS::DCPS::GuidPrefix_t)));
+
+    DiscoveredReaderData reader_data_out;
+    from_param_list(param_list, reader_data_out);
+    TEST_ASSERT(reader_data_out.readerProxy.associatedWriters.length() == 2);
+    TEST_ASSERT(!memcmp(reader_data_out.readerProxy.associatedWriters[0].guidPrefix, 
+                        writer0.guidPrefix, 
+                        sizeof(OpenDDS::DCPS::GuidPrefix_t)));
+    TEST_ASSERT(!memcmp(reader_data_out.readerProxy.associatedWriters[1].guidPrefix,
+                        writer1.guidPrefix, 
+                        sizeof(OpenDDS::DCPS::GuidPrefix_t)));
+
+
   }
   { // Should decode writer multicast ip address
     Parameter param;
